@@ -36,6 +36,26 @@
  */
 class AliHLTTPCDigitReaderRaw : public AliHLTTPCDigitReader  {
 public:
+
+  /** decode mode of the reader */
+  enum RawReaderMode {
+    /** 0: RCU Data format as delivered during TPC commissioning, pads/padrows
+     *  are sorted, RCU trailer is one 32 bit word. */
+    kSorted1Trailerword=0,
+    /** 1: As 0, but pads/padrows are delivered "as is", without sorting */
+    kUnsorted1Trailerword,
+    /** 2: As 0, but RCU trailer is 3 32 bit words. */
+    kSorted3Trailerword,
+    /** 3: As 1, but RCU trailer is 3 32 bit words. */
+    kUnsorted3Trailerword,
+    /** 4: As 0, but RCU trailer is 2 32 bit words. */
+    kSorted2Trailerword,
+    /** 5: As 1, but RCU trailer is 2 32 bit words. */
+    kUnsorted2Trailerword,
+    /** number of modes */
+    kNofRawReaderModes
+  };
+
   /** standard constructor
    * @param formatVersion  Data Format version numbers:
    *  - 0: RCU Data format as delivered during TPC commissioning, pads/padrows
@@ -43,6 +63,8 @@ public:
    *  - 1: As 0, but pads/padrows are delivered "as is", without sorting
    *  - 2: As 0, but RCU trailer is 3 32 bit words.
    *  - 3: As 1, but RCU trailer is 3 32 bit words.
+   *  - 4: As 0, but RCU trailer is 2 32 bit words.
+   *  - 5: As 1, but RCU trailer is 2 32 bit words.
    */
   AliHLTTPCDigitReaderRaw( unsigned formatVersion );
   /** not a valid copy constructor, defined according to effective C++ style */
@@ -128,6 +150,29 @@ public:
   Int_t GetRow( unsigned patch, unsigned hw_addr );
   Int_t GetPad( unsigned patch, unsigned hw_addr );
   unsigned GetMaxHWA( unsigned patch );
+
+  /**
+   * This function decodes the rawreadermode set in HLT***Components
+   * or the AliHLTGUI and returns the integer value of @ref RawReaderMode.
+   * @param mode const Char_t * argument <br>
+   *    sorted_3_trailerword -> @ref kSorted3Trailerword <br>
+   *    sorted_2_trailerword -> @ref kSorted2Trailerword <br>
+   *    sorted_1_trailerword -> @ref kSorted1Trailerword <br>
+   *    unsorted_3_trailerword -> @ref kUnsorted3Trailerword <br>
+   *    unsorted_2_trailerword -> @ref kUnsorted2Trailerword <br>
+   *    unsorted_1_trailerword -> @ref kUnsorted1Trailerword <br>
+   * @return rawreadermode @ref RawReaderMode and -1 if decoding fails
+   */
+  static Int_t DecodeMode(const Char_t *mode);
+
+  /**
+   * This function sets the rawreadermode from an enum.
+   * The name was chosen in order to use the two methods with either
+   * a Char_t array or an Int_t.
+   * @param mode mode enum @ref RawReaderMode
+   * @return rawreadermode @ref RawReaderMode and -1 if decoding fails
+   */
+  static Int_t DecodeMode(Int_t mode);
 
 protected:
 
